fix scroll animations on mobile

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -32,4 +32,5 @@ h3 {
 
 .animate__fadeInLeft {
   animation-fill-mode: backwards;
+  -webkit-animation-fill-mode: backwards;
 }
